load("@rules_zola//zola:defs.bzl", "zola_content_group")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "rules_openocd",
    srcs = ["//openocd:openocd_lib"],
    deps = ["@bazel_skylib//lib:paths"],
)

stardoc(
    name = "rules_openocd_docs",
    out = "api.md",
    header_template = "header.vm",
    input = "//openocd:defs.bzl",
    deps = [":rules_openocd"],
)

zola_content_group(
    name = "api",
    srcs = [":rules_openocd_docs"],
    prefix = "docs/getting-started",
    strip_prefix = ".",
)

zola_content_group(
    name = "content",
    srcs = glob([
        "**/*.md",
    ]),
    strip_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [":api"],
)
